# rules-js-ngc

./: .bazelignore  .bazelrc  .gitignore  .prettierrc  BUILD.bazel  LICENSE.md  README.md  WORKSPACE.bazel  io_bazel_rules_sass.patch  package.json  pnpm-lock.yaml
angular-app/: BUILD.bazel  README.md  angular.json  babel.config.json  esbuild.config.mjs  karma.conf.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.bazel.json  tsconfig.json  webpack-dev-build.config.ts
angular-app/src/: BUILD.bazel  babel.config.json  index.base.html  main.prod.ts  rollup.config.js  styles.scss  tsconfig.json
angular-app/src/app/: BUILD.bazel  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  tsconfig.json
angular-app/src/app/header/: BUILD.bazel  my-header.component.ts  my-header.module.ts  nw-header.component.html  nw-header.component.ts  nw-header.module.ts
angular-app/src/app/mega-menu/: BUILD.bazel  nw-mega-menu.component.css  nw-mega-menu.component.html  nw-mega-menu.component.ts  nw-mega-menu.module.ts
angular-app/src/app/menu/: BUILD.bazel  my-menu.component.html  my-menu.component.ts  my-menu.module.ts
angular-app/src/app/shared/: BUILD.bazel  shared.module.ts
angular-app/src/lib-shared/: BUILD.bazel  public-api.ts  tsconfig.bazel.json
angular-app/src/lib-shared/shared/: BUILD.bazel  my-shared.module.ts
angular-app/src/lib-shared/shared/my-button/: BUILD.bazel  my-button.component.css  my-button.component.ts  my-button.module.ts
angular-app/src/nw-shared/: BUILD.bazel  public-api.ts  tsconfig.json
angular-app/src/nw-shared/shared/: BUILD.bazel  nw-shared.module.ts
angular-app/src/nw-shared/shared/nw-button/: BUILD.bazel  nw-button.component.html  nw-button.component.ts  nw-button.module.ts
angular-app/tools/: BUILD.bazel  angular_ts_project.bzl  defs.bzl  typescript.bzl
