"""
Builds //angular-app/src/app/header
"""
load("//angular-app/tools:angular_ts_project.bzl", "ng_app_ts_project")

package(default_visibility = ["//:__subpackages__"])

ng_app_ts_project(
    name = "header",
    srcs = [
        "my-header.module.ts",
        "my-header.component.ts",
    ],
    angular_assets = [
        "my-header.component.css",
        "my-header.component.html",
    ],
    deps = [
        "//angular-app/src/app/menu",
        "//:node_modules/@angular/core"
    ],
)
