"""
Builds //angular-app/src/app/menu
"""
load("//angular-app/tools:angular_ts_project.bzl", "ng_app_ts_project")
# load("//angular-app/tools:typescript.bzl", "ts_project")

package(default_visibility = ["//:__subpackages__"])

ng_app_ts_project(
    name = "menu",
    srcs = [
        "my-menu.module.ts",
        "my-menu.component.ts"
    ],
    angular_assets = [
        "my-menu.component.css",
        "my-menu.component.html",
    ],
    deps = [
        "//angular-app/src/app/shared",
        "//:node_modules/@angular/core",
        "//:node_modules/@angular/router"
    ])
