"""
Builds //angular-app/src/app/shared
"""
load("//angular-app/tools:angular_ts_project.bzl", "ng_app_ts_project")

package(default_visibility = ["//:__subpackages__"])

ng_app_ts_project(
    name = "shared",
    srcs = [
        ":shared.module.ts"
    ],
    deps = [
        "//angular-app/src/lib-shared",
        "//:node_modules/@angular/common",
        "//:node_modules/@angular/core",
        "//:node_modules/@angular/forms",
        "//:node_modules/@angular/router",
    ],
)
