"""
Builds //angular-app/src/nw-shared/shared
"""
load("//angular-app/tools:angular_ts_project.bzl", "ng_shared_ts_project")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")

package(default_visibility = ["//:__subpackages__"])

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = [
        "//angular-app/src/nw-shared:tsconfig"
    ]
)

ng_shared_ts_project(
    name = "shared",
    srcs = [
        "nw-shared.module.ts"
    ],
    deps = [
        "//angular-app/src/nw-shared/shared/nw-button",
        "//angular-app:node_modules/@angular/core"
    ],
)
