"""
Builds //angular-app/src/nw-shared/shared/nw-button
"""

load("//angular-app/tools:angular_ts_project.bzl", "ng_shared_ts_project")

package(default_visibility = ["//:__subpackages__"])

ng_shared_ts_project(
    name = "nw-button",
    srcs = [
        "nw-button.component.ts",
        "nw-button.module.ts",
    ],
    angular_assets = [
        "nw-button.component.css",
        "nw-button.component.html",
    ],
    deps = [
        "//angular-app:node_modules/@angular/core",
        "//angular-app:node_modules/tslib"
    ],
)
